--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
     <script src="https://use.fontawesome.com/4740e06482.js"></script>
-    <link rel="icon" type="image/png" href="nyt.png">
+    <link rel="icon" type="image/png" href="icon.png">
   </head>
   <body>
     <div id="app"></div>
-    <script src="./dist/build.js"></script>
+    <script src="./dist/app.js"></script>
   </body>
 </html>
